--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "antd": "^4.12.2",
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
+    "moment": "^2.29.1",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.3",
     "react-dom": "^17.0.1",
     "react-highlight-words": "^0.17.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "react-to-pdf": "0.0.13",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
