--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "moment": "^2.29.1",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.3",
+    "react-data-export": "^0.6.0",
     "react-dom": "^17.0.1",
     "react-highlight-words": "^0.17.0",
     "react-qr-code": "^1.1.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "react-to-pdf": "0.0.13",
+    "react-to-print": "^2.12.3",
     "uuidv4": "^6.2.6",
     "web-vitals": "^0.2.4"
   },
